# Solana-C-SDK

./: .gitignore  CMakeLists.txt  README.md
Arc/: Bpfloader.hpp
Scripts/: Simulate.py  Validate_release.sh
Solc/On chain/Burn/: Burnprogram.cpp  burnprogram.hpp
Solc/On chain/Common/: AccountInfo.cpp  AccountInfo.hpp  Seed.cpp  Seed.hpp  Serialization.hpp  SolanaTypes.cpp  SolanaTypes.hpp  Statuscode.cpp  Statuscode.hpp  Syscalls.cpp  Syscalls.hpp  Sysvar.cpp  Sysvar.hpp
Solc/On chain/Governance/: Governanceprogram.cpp  Governanceprogram.hpp
Solc/On chain/IBC/: IBCChannel.cpp  IBCChannel.hpp  IBCClient.cpp  IBCClient.hpp
Solc/On chain/Native/: SolWrapper.cpp  SolWrapper.hpp  Systemprogram.cpp  TokenProgram.cpp  TokenProgram.hpp  systemprogram.hpp
Solc/On chain/Off chain/: GRPCClient.hpp  GRPClient.cpp  SolanaClient.cpp  SolanaClient.hpp
Solc/On chain/Token/: Tokenmintprogram.cpp  Tokenmintprogram.hpp
Solc/Src/: Bugwatcher.cpp  BurnBlock.cpp  Connection.cpp  Ledgerinterface.cpp  Main.cpp  Smartcontract.cpp  feecalculator.cpp
Solc/include/hrc/: Bpfloader.hpp  Bugwatcher.hpp  BurnBlock.hpp  Connection.hpp  Feecalculator.hpp  Ledgerinterface.hpp  Smartcontract.hpp
